<!--
  ~ Copyright (C) 2016 Mantas Varnagiris.
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<resources>
    <string name="app_name">Expensius</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="tags">Tags</string>
    <string name="color">Color</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="error_title_empty">Title cannot be empty.</string>
    <string name="create">Create</string>
    <string name="undo">Undo</string>
    <string name="restore">Restore</string>
    <string name="tag_restored">Tag restored</string>
    <string name="tag_archived">Tag archived</string>
    <string name="archived_tags">Archived tags</string>
    <string name="archived_transactions">Archived transactions</string>
    <string name="archive">Archive</string>
    <string name="calculator">Calculator</string>
    <string name="add_a_note">Add a note</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="confirmed">Confirmed</string>
    <string name="transaction">Transaction</string>
    <string name="transactions">Transactions</string>
    <string name="select_tags">Select tags</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="more_options">More options</string>
    <string name="show_archived_tags">Show archived tags</string>
    <string name="main_currency">Main currency</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="support_developer">Support developer</string>
    <string name="report_grouping">Report grouping</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="settings">Settings</string>

    <string name="long_user_is_using_free_version">You are using free version</string>
    <string name="long_user_is_using_premium_version">Thank you for using premium version</string>
    <string name="long_no_purchases_available">At the moment there is nothing you can buy. Check back later.</string>
    <string name="error_refreshing_purchases">Cannot get products to buy at the moment. Check back later.</string>

    <string name="tag_fixed">Fixed</string>
    <string name="tag_essential">Essential</string>
    <string name="tag_non_essential">Non-essential</string>
    <string name="tag_food">Food</string>
    <string name="tag_leisure">Leisure</string>
    <string name="tag_clothes">Clothes</string>
    <string name="tag_transport">Transport</string>
    <string name="tag_household">Household</string>
    <string name="tag_health_and_beauty">Health &amp; beauty</string>
    <string name="tag_bills_and_utilities">Bills &amp; utilities</string>
    <string name="tag_pets">Pets</string>

    <string name="intro_title_1">Intro title 1</string>
    <string name="intro_title_2">Intro title 2</string>
    <string name="intro_title_3">Intro title 3</string>
    <string name="intro_title_4">Intro title 4</string>
    <string name="intro_message_1">Intro message 1 that can be long and describe some interesting functionality</string>
    <string name="intro_message_2">Intro message 2 that can be long and describe some interesting functionality</string>
    <string name="intro_message_3">Intro message 3 that can be long and describe some interesting functionality</string>
    <string name="intro_message_4">Intro message 4 that can be long and describe some interesting functionality</string>
</resources>
