<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Mantas Varnagiris.
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<com.mvcoding.expensius.feature.transaction.TransactionView android:id="@+id/transactionView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimary"
                android:elevation="@dimen/elevation_toolbar"
                android:orientation="vertical"
                android:theme="?themeInverse"
                tools:ignore="UnusedAttribute">

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/amountTextView"
                    style="@style/Button.Flat.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:padding="@dimen/keyline"
                    android:textAppearance="@style/Text.Display3"
                    tools:text="£1,234.56" />

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/transactionTypeFloatingActionButton"
                style="@style/Button.Fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline"
                android:layout_marginTop="@dimen/fab_mini_size_half_negative"
                android:src="@drawable/ic_action_transaction_type"
                app:fabSize="mini" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline"
                android:clipToPadding="false"
                android:gravity="center_vertical"
                android:minHeight="?actionBarSize"
                android:paddingLeft="@dimen/keyline"
                android:paddingRight="@dimen/keyline">

                <ImageView
                    android:layout_width="@dimen/keyline_content_minus_keyline_2x"
                    android:layout_height="@dimen/keyline_content_minus_keyline_2x"
                    android:layout_marginEnd="@dimen/keyline"
                    android:contentDescription="@string/date"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_calendar"
                    android:tint="?colorActionIcon" />

                <Button
                    android:id="@+id/dateButton"
                    style="@style/Button.Flat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-12dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    tools:text="December 28" />

                <Button
                    android:id="@+id/timeButton"
                    style="@style/Button.Flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-12dp"
                    android:gravity="end|center_vertical"
                    tools:text="16:13" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline"
                android:gravity="center_vertical"
                android:minHeight="?actionBarSize"
                android:paddingLeft="@dimen/keyline"
                android:paddingRight="@dimen/keyline">

                <ImageView
                    android:layout_width="@dimen/keyline_content_minus_keyline_2x"
                    android:layout_height="@dimen/keyline_content_minus_keyline_2x"
                    android:layout_marginEnd="@dimen/keyline"
                    android:contentDescription="@string/tags"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_tag"
                    android:tint="?colorActionIcon" />

                <Button
                    android:id="@+id/tagsButton"
                    style="@style/Button.Flat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:textAllCaps="false"
                    tools:text="Essential, Food" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline"
                android:gravity="center_vertical"
                android:minHeight="?actionBarSize"
                android:paddingLeft="@dimen/keyline"
                android:paddingRight="@dimen/keyline">

                <ImageView
                    android:layout_width="@dimen/keyline_content_minus_keyline_2x"
                    android:layout_height="@dimen/keyline_content_minus_keyline_2x"
                    android:layout_marginEnd="@dimen/keyline"
                    android:contentDescription="@string/note"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_action_short_text"
                    android:tint="?colorActionIcon" />

                <EditText
                    android:id="@+id/noteEditText"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/note" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/transactionStateCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_plus_view_padding"
                android:layout_marginTop="@dimen/keyline"
                android:gravity="center_vertical"
                android:minHeight="?actionBarSize"
                android:paddingEnd="@dimen/keyline"
                android:paddingStart="@dimen/keyline_plus_view_padding"
                android:text="@string/confirmed"
                android:textAppearance="@style/Text.Subhead"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/buttonBarView"
        style="@style/ButtonBar">

        <Button
            android:id="@+id/saveButton"
            style="@style/Button.Flat.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/save" />
    </FrameLayout>

</com.mvcoding.expensius.feature.transaction.TransactionView>